# docs/swagger.json
@@ -9,6 +9,11 @@
     "paths": {
         "/v1/tasks/{id}": {
             "get": {
+                "security": [
+                    {
+                        "TokenAuth": []
+                    }
+                ],
                 "description": "ユーザのタスクを1件取得する",
                 "produces": [
                     "application/json"
@@ -58,5 +63,11 @@
             }
         }
     },
-    "x-order": 1
+    "securityDefinitions": {
+        "TokenAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
